* Bug #38894: [WIP] fixed appDetailsPage grid not showing content
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.1/ucs-4.1-0@63741 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/umc/js/appcenter.css
+++ b/management/univention-management-console-module-appcenter/umc/js/appcenter.css
@@ -216,3 +216,11 @@
 .appcenterMetaCategory .dijitButton {
 	float: right;
 }
+
+.appDetailsPageGrid {
+	margin-bottom: 3em;
+}
+
+.appDetailsPageGrid .appDetailsPageGridContent {
+	height: 105px !important;
+}
